Добавлены аннотации JPA, репозитории и обновлены сервисы User/Item.